--- a/docs/template/template.html
+++ b/docs/template/template.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 
 
-<html lang="en" data-content_root="./" >
+<html lang="en" data-content_root="../" >
 
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Welcome to Electronics Journey’s documentation! &#8212; Electronic Journeys</title>
+    <title>Template &#8212; Electronic Journeys</title>
   
   
   
@@ -18,32 +18,32 @@
   </script>
   
   <!-- Loaded before other Sphinx assets -->
-  <link href="_static/styles/theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
-<link href="_static/styles/bootstrap.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
-<link href="_static/styles/pydata-sphinx-theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
+  <link href="../_static/styles/theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
+<link href="../_static/styles/bootstrap.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
+<link href="../_static/styles/pydata-sphinx-theme.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
 
   
-  <link href="_static/vendor/fontawesome/6.5.2/css/all.min.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
-  <link rel="preload" as="font" type="font/woff2" crossorigin href="_static/vendor/fontawesome/6.5.2/webfonts/fa-solid-900.woff2" />
-<link rel="preload" as="font" type="font/woff2" crossorigin href="_static/vendor/fontawesome/6.5.2/webfonts/fa-brands-400.woff2" />
-<link rel="preload" as="font" type="font/woff2" crossorigin href="_static/vendor/fontawesome/6.5.2/webfonts/fa-regular-400.woff2" />
+  <link href="../_static/vendor/fontawesome/6.5.2/css/all.min.css?digest=dfe6caa3a7d634c4db9b" rel="stylesheet" />
+  <link rel="preload" as="font" type="font/woff2" crossorigin href="../_static/vendor/fontawesome/6.5.2/webfonts/fa-solid-900.woff2" />
+<link rel="preload" as="font" type="font/woff2" crossorigin href="../_static/vendor/fontawesome/6.5.2/webfonts/fa-brands-400.woff2" />
+<link rel="preload" as="font" type="font/woff2" crossorigin href="../_static/vendor/fontawesome/6.5.2/webfonts/fa-regular-400.woff2" />
 
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=a746c00c" />
-    <link rel="stylesheet" type="text/css" href="_static/styles/sphinx-book-theme.css?v=a3416100" />
+    <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=a746c00c" />
+    <link rel="stylesheet" type="text/css" href="../_static/styles/sphinx-book-theme.css?v=a3416100" />
   
   <!-- Pre-loaded scripts that we'll load fully later -->
-  <link rel="preload" as="script" href="_static/scripts/bootstrap.js?digest=dfe6caa3a7d634c4db9b" />
-<link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
-  <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
+  <link rel="preload" as="script" href="../_static/scripts/bootstrap.js?digest=dfe6caa3a7d634c4db9b" />
+<link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
+  <script src="../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=9eb32ce0"></script>
-    <script src="_static/doctools.js?v=9a2dae69"></script>
-    <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
-    <script src="_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
-    <script>DOCUMENTATION_OPTIONS.pagename = 'index';</script>
-    <link rel="index" title="Index" href="genindex.html" />
-    <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Chapter 0 - The Preamble" href="chapter0/chapter0.html" />
+    <script src="../_static/documentation_options.js?v=9eb32ce0"></script>
+    <script src="../_static/doctools.js?v=9a2dae69"></script>
+    <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
+    <script src="../_static/scripts/sphinx-book-theme.js?v=887ef09a"></script>
+    <script>DOCUMENTATION_OPTIONS.pagename = 'template/template';</script>
+    <link rel="index" title="Index" href="../genindex.html" />
+    <link rel="search" title="Search" href="../search.html" />
+    <link rel="prev" title="Chapter 0 - The Preamble" href="../chapter1/chapter1.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -75,7 +75,7 @@
     <div class="search-button__overlay"></div>
     <div class="search-button__search-container">
 <form class="bd-search d-flex align-items-center"
-      action="search.html"
+      action="../search.html"
       method="get">
   <i class="fa-solid fa-magnifying-glass"></i>
   <input type="search"
@@ -106,8 +106,6 @@
       
       
       
-        
-      
       <div class="bd-sidebar-primary bd-sidebar">
         
 
@@ -126,7 +124,7 @@
     
   
 
-<a class="navbar-brand logo" href="#">
+<a class="navbar-brand logo" href="../index.html">
   
   
   
@@ -137,8 +135,8 @@
       
     
     
-    <img src="_static/ElectronicJourneyLogo.jpeg" class="logo__image only-light" alt="Electronic Journeys - Home"/>
-    <script>document.write(`<img src="_static/ElectronicJourneyLogo.jpeg" class="logo__image only-dark" alt="Electronic Journeys - Home"/>`);</script>
+    <img src="../_static/ElectronicJourneyLogo.jpeg" class="logo__image only-light" alt="Electronic Journeys - Home"/>
+    <script>document.write(`<img src="../_static/ElectronicJourneyLogo.jpeg" class="logo__image only-dark" alt="Electronic Journeys - Home"/>`);</script>
   
   
 </a></div>
@@ -183,10 +181,10 @@
         <div class="sidebar-primary-item"><nav class="bd-links bd-docs-nav" aria-label="Main">
     <div class="bd-toc-item navbar-nav active">
         <p aria-level="2" class="caption" role="heading"><span class="caption-text">Contents:</span></p>
-<ul class="nav bd-sidenav">
-<li class="toctree-l1"><a class="reference internal" href="chapter0/chapter0.html">Chapter 0 - The Preamble</a></li>
-<li class="toctree-l1"><a class="reference internal" href="chapter1/chapter1.html">Chapter 1 - The Fundamentals</a></li>
-<li class="toctree-l1"><a class="reference internal" href="template/template.html">Template</a></li>
+<ul class="current nav bd-sidenav">
+<li class="toctree-l1"><a class="reference internal" href="../chapter0/chapter0.html">Chapter 0 - The Preamble</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../chapter1/chapter1.html">Chapter 1 - The Fundamentals</a></li>
+<li class="toctree-l1 current active"><a class="current reference internal" href="#">Template</a></li>
 </ul>
 
     </div>
@@ -256,7 +254,7 @@
       
       
       
-      <li><a href="_sources/index.rst" target="_blank"
+      <li><a href="../_sources/template/template.rst" target="_blank"
    class="btn btn-sm btn-download-source-button dropdown-item"
    title="Download source file"
    data-bs-placement="left" data-bs-toggle="tooltip"
@@ -340,7 +338,7 @@ document.write(`
               
 
 <div id="jb-print-docs-body" class="onlyprint">
-    <h1>Welcome to Electronics Journey’s documentation!</h1>
+    <h1>Template</h1>
     <!-- Table of contents -->
     <div id="print-main-content">
         <div id="jb-print-toc">
@@ -350,10 +348,25 @@ document.write(`
             </div>
             <nav aria-label="Page">
                 <ul class="visible nav section-nav flex-column">
-<li class="toc-h1 nav-item toc-entry"><a class="reference internal nav-link" href="#">Welcome to Electronics Journey’s documentation!</a></li>
-<li class="toc-h1 nav-item toc-entry"><a class="reference internal nav-link" href="#indices-and-tables">Indices and tables</a></li>
+<li class="toc-h2 nav-item toc-entry"><a class="reference internal nav-link" href="#title-heading">Title Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h3 nav-item toc-entry"><a class="reference internal nav-link" href="#subtitle-heading">Subtitle Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h4 nav-item toc-entry"><a class="reference internal nav-link" href="#section-heading">Section Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h5 nav-item toc-entry"><a class="reference internal nav-link" href="#subsection-heading">Subsection Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h6 nav-item toc-entry"><a class="reference internal nav-link" href="#subsubsection-heading">Subsubsection Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#paragraph-heading">Paragraph Heading</a></li>
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#sidebar">Sidebar</a></li>
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#footnotes">Footnotes</a></li>
 </ul>
-
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
             </nav>
         </div>
     </div>
@@ -364,30 +377,87 @@ document.write(`
 <div id="searchbox"></div>
                 <article class="bd-article">
                   
-  <section id="welcome-to-electronics-journey-s-documentation">
-<h1>Welcome to Electronics Journey’s documentation!<a class="headerlink" href="#welcome-to-electronics-journey-s-documentation" title="Link to this heading">#</a></h1>
-<p>Hello and welcome to my website. This serves as an open place of learning.
-The goal of this site is to share knowledge and document projects for all to benefit.</p>
-<p>The site will be structured into larger chapters of fundamentals as well as project documentation.</p>
-<div class="toctree-wrapper compound">
-<p aria-level="2" class="caption" role="heading"><span class="caption-text">Contents:</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="chapter0/chapter0.html">Chapter 0 - The Preamble</a></li>
-<li class="toctree-l1"><a class="reference internal" href="chapter1/chapter1.html">Chapter 1 - The Fundamentals</a></li>
-<li class="toctree-l1"><a class="reference internal" href="template/template.html">Template</a><ul>
-<li class="toctree-l2"><a class="reference internal" href="template/template.html#title-heading">Title Heading</a></li>
-</ul>
-</li>
-</ul>
+  <section id="template">
+<h1>Template<a class="headerlink" href="#template" title="Link to this heading">#</a></h1>
+<p>This website is generated using Sphinx .rst -&gt; html generation with the Book theme.
+With that theme comes some additionaly formatting available.</p>
+<p><a class="reference external" href="https://sphinx-book-theme.readthedocs.io/en/latest/">Book Theme Docs</a>.</p>
+<section id="title-heading">
+<h2>Title Heading<a class="headerlink" href="#title-heading" title="Link to this heading">#</a></h2>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">######################</span>
+<span class="gh">Title Header</span>
+<span class="gh">######################</span>
+</pre></div>
+</div>
+<section id="subtitle-heading">
+<h3>Subtitle Heading<a class="headerlink" href="#subtitle-heading" title="Link to this heading">#</a></h3>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">**********************</span>
+<span class="gh">Subtitle Header</span>
+<span class="gh">**********************</span>
+</pre></div>
+</div>
+<section id="section-heading">
+<h4>Section Heading<a class="headerlink" href="#section-heading" title="Link to this heading">#</a></h4>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">======================</span>
+<span class="gh">Section Header</span>
+<span class="gh">======================</span>
+</pre></div>
+</div>
+<section id="subsection-heading">
+<h5>Subsection Heading<a class="headerlink" href="#subsection-heading" title="Link to this heading">#</a></h5>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">----------------------</span>
+<span class="gh">Subsection Header</span>
+<span class="gh">----------------------</span>
+</pre></div>
+</div>
+<section id="subsubsection-heading">
+<h6>Subsubsection Heading<a class="headerlink" href="#subsubsection-heading" title="Link to this heading">#</a></h6>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">^^^^^^^^^^^^^^^^^^^^^^</span>
+<span class="gh">Subsubsection Header</span>
+<span class="gh">^^^^^^^^^^^^^^^^^^^^^^</span>
+</pre></div>
+</div>
+<section id="paragraph-heading">
+<h6 aria-level="7">Paragraph Heading<a class="headerlink" href="#paragraph-heading" title="Link to this heading">#</a></h6>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="gh">&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;</span>
+<span class="gh">Paragraph Header</span>
+<span class="gh">&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;&quot;</span>
+</pre></div>
 </div>
 </section>
-<section id="indices-and-tables">
-<h1>Indices and tables<a class="headerlink" href="#indices-and-tables" title="Link to this heading">#</a></h1>
-<ul class="simple">
-<li><p><a class="reference internal" href="genindex.html"><span class="std std-ref">Index</span></a></p></li>
-<li><p><a class="reference internal" href="py-modindex.html"><span class="std std-ref">Module Index</span></a></p></li>
-<li><p><a class="reference internal" href="search.html"><span class="std std-ref">Search Page</span></a></p></li>
-</ul>
+<section id="sidebar">
+<h6 aria-level="7">Sidebar<a class="headerlink" href="#sidebar" title="Link to this heading">#</a></h6>
+<aside class="sidebar">
+<p class="sidebar-title">Sidebar Title</p>
+<p>Sidebar Text</p>
+</aside>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="p">    ..</span> <span class="ow">sidebar</span><span class="p">::</span> Sidebar Title
+
+Sidebar Text
+</pre></div>
+</div>
+</section>
+<section id="footnotes">
+<h6 aria-level="7">Footnotes<a class="headerlink" href="#footnotes" title="Link to this heading">#</a></h6>
+<p>This is an example footnoot reference: <a class="footnote-reference brackets" href="#id2" id="id1" role="doc-noteref"><span class="fn-bracket">[</span>1<span class="fn-bracket">]</span></a></p>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span>This is an example footnoot reference: <span class="s">[1]_</span>
+</pre></div>
+</div>
+<aside class="footnote-list brackets">
+<aside class="footnote brackets" id="id2" role="doc-footnote">
+<span class="label"><span class="fn-bracket">[</span><a role="doc-backlink" href="#id1">1</a><span class="fn-bracket">]</span></span>
+<p>This is an example numbered footnote</p>
+</aside>
+</aside>
+<div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="p">..</span> <span class="nt">[1]</span> This is an example numbered footnotes
+</pre></div>
+</div>
+</section>
+</section>
+</section>
+</section>
+</section>
+</section>
 </section>
 
 
@@ -401,14 +471,14 @@ The goal of this site is to share knowledge and document projects for all to ben
                 <footer class="prev-next-footer d-print-none">
                   
 <div class="prev-next-area">
-    <a class="right-next"
-       href="chapter0/chapter0.html"
-       title="next page">
+    <a class="left-prev"
+       href="../chapter1/chapter1.html"
+       title="previous page">
+      <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
-        <p class="prev-next-subtitle">next</p>
+        <p class="prev-next-subtitle">previous</p>
         <p class="prev-next-title">Chapter 0 - The Preamble</p>
       </div>
-      <i class="fa-solid fa-angle-right"></i>
     </a>
 </div>
                 </footer>
@@ -426,10 +496,25 @@ The goal of this site is to share knowledge and document projects for all to ben
   </div>
   <nav class="bd-toc-nav page-toc">
     <ul class="visible nav section-nav flex-column">
-<li class="toc-h1 nav-item toc-entry"><a class="reference internal nav-link" href="#">Welcome to Electronics Journey’s documentation!</a></li>
-<li class="toc-h1 nav-item toc-entry"><a class="reference internal nav-link" href="#indices-and-tables">Indices and tables</a></li>
+<li class="toc-h2 nav-item toc-entry"><a class="reference internal nav-link" href="#title-heading">Title Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h3 nav-item toc-entry"><a class="reference internal nav-link" href="#subtitle-heading">Subtitle Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h4 nav-item toc-entry"><a class="reference internal nav-link" href="#section-heading">Section Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h5 nav-item toc-entry"><a class="reference internal nav-link" href="#subsection-heading">Subsection Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h6 nav-item toc-entry"><a class="reference internal nav-link" href="#subsubsection-heading">Subsubsection Heading</a><ul class="nav section-nav flex-column">
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#paragraph-heading">Paragraph Heading</a></li>
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#sidebar">Sidebar</a></li>
+<li class="toc-h7 nav-item toc-entry"><a class="reference internal nav-link" href="#footnotes">Footnotes</a></li>
 </ul>
-
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
   </nav></div>
 
 </div></div>
@@ -473,8 +558,8 @@ The goal of this site is to share knowledge and document projects for all to ben
   </div>
   
   <!-- Scripts loaded after <body> so the DOM is not blocked -->
-  <script src="_static/scripts/bootstrap.js?digest=dfe6caa3a7d634c4db9b"></script>
-<script src="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b"></script>
+  <script src="../_static/scripts/bootstrap.js?digest=dfe6caa3a7d634c4db9b"></script>
+<script src="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b"></script>
 
   <footer class="bd-footer">
   </footer>
