--- a/docs/template/template.html
+++ b/docs/template/template.html
@@ -43,7 +43,7 @@
     <script>DOCUMENTATION_OPTIONS.pagename = 'template/template';</script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="prev" title="Chapter 0 - The Preamble" href="../chapter1/chapter1.html" />
+    <link rel="prev" title="Resources" href="../resources/resources.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   </head>
@@ -184,6 +184,7 @@
 <ul class="current nav bd-sidenav">
 <li class="toctree-l1"><a class="reference internal" href="../chapter0/chapter0.html">Chapter 0 - The Preamble</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../chapter1/chapter1.html">Chapter 1 - The Fundamentals</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../resources/resources.html">Resources</a></li>
 <li class="toctree-l1 current active"><a class="current reference internal" href="#">Template</a></li>
 </ul>
 
@@ -228,18 +229,67 @@
 <div class="article-header-buttons">
 
 
-<a href="https://github.com/Killerkarebearz/Electronic-Journey" target="_blank"
-   class="btn btn-sm btn-source-repository-button"
+
+
+
+<div class="dropdown dropdown-source-buttons">
+  <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Source repositories">
+    <i class="fab fa-github"></i>
+  </button>
+  <ul class="dropdown-menu">
+      
+      
+      
+      <li><a href="https://github.com/Killerkarebearz/Electronic-Journey" target="_blank"
+   class="btn btn-sm btn-source-repository-button dropdown-item"
    title="Source repository"
-   data-bs-placement="bottom" data-bs-toggle="tooltip"
+   data-bs-placement="left" data-bs-toggle="tooltip"
 >
   
 
 <span class="btn__icon-container">
   <i class="fab fa-github"></i>
   </span>
-
+<span class="btn__text-container">Repository</span>
 </a>
+</li>
+      
+      
+      
+      
+      <li><a href="https://github.com/Killerkarebearz/Electronic-Journey/edit/main/source/template/template.rst" target="_blank"
+   class="btn btn-sm btn-source-edit-button dropdown-item"
+   title="Suggest edit"
+   data-bs-placement="left" data-bs-toggle="tooltip"
+>
+  
+
+<span class="btn__icon-container">
+  <i class="fas fa-pencil-alt"></i>
+  </span>
+<span class="btn__text-container">Suggest edit</span>
+</a>
+</li>
+      
+      
+      
+      
+      <li><a href="https://github.com/Killerkarebearz/Electronic-Journey/issues/new?title=Issue%20on%20page%20%2Ftemplate/template.html&body=Your%20issue%20content%20here." target="_blank"
+   class="btn btn-sm btn-source-issues-button dropdown-item"
+   title="Open an issue"
+   data-bs-placement="left" data-bs-toggle="tooltip"
+>
+  
+
+<span class="btn__icon-container">
+  <i class="fas fa-lightbulb"></i>
+  </span>
+<span class="btn__text-container">Open issue</span>
+</a>
+</li>
+      
+  </ul>
+</div>
 
 
 
@@ -439,16 +489,13 @@ Sidebar Text
 </section>
 <section id="footnotes">
 <h6 aria-level="7">Footnotes<a class="headerlink" href="#footnotes" title="Link to this heading">#</a></h6>
-<p>This is an example footnoot reference: <a class="footnote-reference brackets" href="#id2" id="id1" role="doc-noteref"><span class="fn-bracket">[</span>1<span class="fn-bracket">]</span></a></p>
+<p>This is an example footnoot reference: <label for='sidenote-role-1' class='margin-toggle'><span id="id1">
+<sup>1</sup></span>
+
+</label><input type='checkbox' id='sidenote-role-1' name='sidenote-role-1' class='margin-toggle'><span class="sidenote"><sup>1</sup>This is an example numbered footnote</span></p>
 <div class="highlight-rst notranslate"><div class="highlight"><pre><span></span>This is an example footnoot reference: <span class="s">[1]_</span>
 </pre></div>
 </div>
-<aside class="footnote-list brackets">
-<aside class="footnote brackets" id="id2" role="doc-footnote">
-<span class="label"><span class="fn-bracket">[</span><a role="doc-backlink" href="#id1">1</a><span class="fn-bracket">]</span></span>
-<p>This is an example numbered footnote</p>
-</aside>
-</aside>
 <div class="highlight-rst notranslate"><div class="highlight"><pre><span></span><span class="p">..</span> <span class="nt">[1]</span> This is an example numbered footnotes
 </pre></div>
 </div>
@@ -472,12 +519,12 @@ Sidebar Text
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../chapter1/chapter1.html"
+       href="../resources/resources.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Chapter 0 - The Preamble</p>
+        <p class="prev-next-title">Resources</p>
       </div>
     </a>
 </div>
